# SHADA-API-Core-Reference

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
shadax/: __init__.py  config.py  core.py  encoder.py  heads.py  model.py  modules.py  network.py  ssl.py  training.py
shadax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_encoder.py  test_heads.py  test_model.py  test_pipeline.py  test_ssl.py
