[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadax"
version = "0.1.0"
description = "SHADA algorithm Python implementation"
authors = [{ name = "Omar" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shadax*"]